--- a/src/jinja/index.j2
+++ b/src/jinja/index.j2
@@ -28,7 +28,7 @@
       <!-- PUBLICATIONS -->
   {% include 'publications.j2' %}
   {% include 'talks.j2' %}
-      <!-- BLOG -->
+      <!-- BLOG (kept off navbar; accessible via #blog hash) -->
       {% include 'blog.j2' %}
       <!-- CONTACT -->
       {% include 'contact.j2' %}
