--- a/src/jinja/blog.j2
+++ b/src/jinja/blog.j2
@@ -7,7 +7,9 @@
     <ul class="blog-posts-list">
       {% for post in blog.POSTS %}
       <li class="blog-post-item">
-        <a href="{{post.url}}" target="_blank">
+        {# Open external links in new tab; internal links (local files) in same tab #}
+        {% set is_external = post.url and post.url.startswith('http') %}
+        <a href="{{post.url}}" {% if is_external %}target="_blank" rel="noopener noreferrer"{% endif %}>
           <figure class="blog-banner-box">
             <img src="{{post.image}}" alt="{{post.title}}" loading="lazy">
           </figure>
