--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1923,6 +1923,7 @@ main {
   margin-bottom: 10px;
   line-height: 1.3;
   transition: var(--transition-1);
+  text-align: center;
 }
 
 .blog-post-item>a:hover .blog-item-title {
@@ -1934,6 +1935,7 @@ main {
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
   line-height: 1.6;
+  text-align: center;
 }
 
 
