--- a/src/jinja/blog.j2
+++ b/src/jinja/blog.j2
@@ -10,9 +10,11 @@
         {# Open external links in new tab; internal links (local files) in same tab #}
         {% set is_external = post.url and post.url.startswith('http') %}
         <a href="{{post.url}}" {% if is_external %}target="_blank" rel="noopener noreferrer"{% endif %}>
+          {% if post.image %}
           <figure class="blog-banner-box">
             <img src="{{post.image}}" alt="{{post.title}}" loading="lazy">
           </figure>
+          {% endif %}
           <div class="blog-content">
             <div class="blog-meta">
               <p class="blog-category">{{post.category}}</p>
